--- a/index.css
+++ b/index.css
@@ -4,6 +4,13 @@ p {
   font-family: 'Courier New', Courier, monospace;
 }
 
+/*Horizontal white bar*/
+.bar{
+  background-color: #d3d3d3;
+  width: 1239px;
+  height: 20px;
+}
+
 /*Canvas used for game*/
 canvas {
 border:1px solid #d3d3d3;
@@ -72,6 +79,5 @@ h4 {
 /* Background Colour of Website */
 body {background-color: rgb(0, 0, 0);
 
-  
-
 }
+
