--- a/index.css
+++ b/index.css
@@ -26,6 +26,12 @@ margin-right: auto;
 display: block;
 }
 
+/*Up and Down button placement*/
+h5 {
+margin-left: 70px;
+display: inline-block;
+}
+
 /* Colour and font of "Instructions" text */
 h3 {
   color: ghostwhite;
